Added alts to bio pictures

--- a/bio.html
+++ b/bio.html
@@ -30,10 +30,10 @@
         
         <!-- RIGHT BOX: IMAGE -->
         <div id="right">
-            <img src="Images/IMG_5650.JPG" alt="surprised sea creatures">
-        <img src="Images/IMG_5651.JPG">
-        <img src="Images/IMG_5652.JPG">
-        <img src="Images/IMG_5653.JPG">
+            <img src="Images/IMG_5650.JPG" alt="surprised sea creatures O:">
+        <img src="Images/IMG_5651.JPG" alt="surprised sea creatures O:">
+        <img src="Images/IMG_5652.JPG" alt="surprised sea creatures O:">
+        <img src="Images/IMG_5653.JPG" alt="surprised sea creatures O:">
         </div>
         
 <!-- FOOTER -->	    
